# youtube-shorts-gen

./: .env.test  .gitignore  README.md  ai_content.py  functions_inventory.csv  internet_content.py  main.py  pyproject.toml  run_tests.py  youtube_test.py
tests/: conftest.py  test_integration.py  test_internet_content_fetcher.py  test_paragraph_processor.py  test_paragraph_tts_syncer.py  test_script_and_image_from_internet.py  test_video_creation_pipeline.py  test_youtube_script_gen.py  test_youtube_transcript_pipeline.py
youtube_shorts_gen/: __init__.py  config.py  main.py  runway.py  story_prompt_gen.py  sync_video_with_tts.py  upload_to_youtube.py  youtube_script_gen.py
youtube_shorts_gen/content/: __init__.py  internet_content_fetcher.py  script_and_image_from_internet.py  script_and_image_gen.py  story_prompt_gen.py  transcript_segmenter.py
youtube_shorts_gen/media/: __init__.py  image_generator.py  paragraph_processor.py  paragraph_tts.py  paragraph_tts_syncer.py  runway.py  sync_video_with_tts.py  text_processor.py  tts_generator.py  video_assembler.py  video_audio_sync.py
youtube_shorts_gen/pipelines/: __init__.py  ai_content_pipeline.py  internet_content_pipeline.py  timelapse_pipeline.py  upload_pipeline.py  youtube_transcript_pipeline.py
youtube_shorts_gen/scrapers/: __init__.py  base_scraper.py  dogdrip.py  dogdrip_scraper.py  scraper_factory.py  youtube_transcript_scraper.py
youtube_shorts_gen/upload/: __init__.py  upload_history.json  upload_history.py  upload_to_youtube.py  uploaded_stories.json
youtube_shorts_gen/utils/: __init__.py  common.py  config.py  frame_interpolator.py  image_utils.py  openai_client.py  openai_image.py  setup.py
